# scripts.zotero-notion-ghstars

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
csv_update/: pipeline.py  runner.py
docs/: find_alphaxiv_github.sh  huggingface.md
docs/plans/: 2026-03-13-alphaxiv-api-only-design.md  2026-03-13-alphaxiv-api-only.md  2026-03-13-github-fallback-discovery-design.md  2026-03-13-github-fallback-discovery.md  2026-03-20-stars-rename-design.md  2026-03-20-stars-rename.md
html_to_csv/: arxiv.py  csv_writer.py  html_parser.py  models.py  pipeline.py
notion_sync/: pipeline.py
shared/: discovery.py  paper_enrichment.py  paper_export.py  paper_identity.py  progress.py
src/: __init__.py  app.py
src/arxiv_relations/: __init__.py  pipeline.py  runner.py  title_resolution.py
src/csv_update/: pipeline.py  runner.py
src/legacy/: __init__.py  alphaxiv.py
src/notion_sync/: __init__.py  config.py  notion_client.py  pipeline.py  runner.py
tests/: conftest.py  test_arxiv_org.py  test_arxiv_relations.py  test_concurrency_settings.py  test_config.py  test_csv_update.py  test_dispatch.py  test_huggingface_papers.py  test_main.py  test_notion_mode.py  test_openalex.py  test_paper_enrichment.py  test_relation_resolution_cache.py  test_repo_cache.py  test_repo_hygiene.py  test_semanticscholar.py  test_shared_arxiv.py  test_shared_papers.py  test_shared_services.py  test_src_layout.py  test_url_export_filenames.py  test_url_sources.py  test_url_to_csv.py
url_to_csv/: arxivxplorer.py  huggingface_papers.py  models.py  pipeline.py  runner.py  sources.py
(+54 files in other folders)
